webapp-deployment/myapp-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp-deployment
  namespace: flaskapp-nikola
  labels:
    app: flaskapp
spec:
  selector:
    matchLabels:
      app: flaskapp
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
      - name: flask-container
        image: t0b9/flask-app-nikola:latest
        resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu:  100m
              memory: 256Mi
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flaskapp-nikola
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: flaskapp
  type: LoadBalancer
