webapp-deployment/mysql-deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: flaskapp-nikola
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: flaskapp-nikola
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
      metadata:
        labels:
          app: db
      spec:
        containers:
        - name: mysql
          image: mysql
          resources:
            requests:
              cpu:  250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi
          args: ["--default-authentication-plugin=mysql_native_password"]
          ports:
          - containerPort: 3306
            name: db-container
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
        volumes:
          - name: mysql-persistent-storage
            persistentVolumeClaim:
              claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: flaskapp-nikola
  labels:
    app: db
spec:
  ports:
  - port: 3306
    protocol: TCP
    name: mysql
  selector:
    app: db
  type: LoadBalancer
